  * apt-pkg/orderlist.cc:
    - prefer visiting packages marked for deletion in VisitProvides
      if we are operating on a negative dependency so that we can
      deal early with the fallout of this remove
  * apt-pkg/indexrecords.cc:
    - fix Acquire::Max-ValidTime option by interpreting it really
      as seconds as specified in the manpage and not as days

 -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 05 Sep 2011 13:24:37 +0200

apt (0.8.15.6) unstable; urgency=low

  [ Michael Vogt ]
  * apt-pkg/contrib/fileutl.{cc,h}:
    - add GetModificationTime() helper
  * apt-pkg/pkgcachegen.cc:
    - regenerate the cache if the sources.list changes to ensure
      that changes in the ordering there will be honored by apt
  * apt-pkg/sourcelist.{cc,h}:
    - add pkgSourceList::GetLastModifiedTime() helper
  * apt-pkg/pkgcachegen.{cc,h}:
    - use ref-to-ptr semantic in NewDepends() to ensure that the   
      libapt does not segfault if the cache is remapped in between
      (LP: #812862)
    - fix crash when P.Arch() was used but the cache got remapped
  * test/integration/test-hashsum-verification:
    - add regression test for hashsum verification
  * apt-pkg/acquire-item.cc:
    - if no Release.gpg file is found, still load the hashes for
      verification (closes: #636314) and add test
  
  [ David Kalnischkies ]
  * lots of cppcheck fixes

 -- Michael Vogt <mvo@debian.org>  Mon, 15 Aug 2011 09:20:35 +0200

apt (0.8.15.5) unstable; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/deb/deblistparser.cc:
    - do not assume that the last char on a line is a \n (Closes: #633350)

 -- Michael Vogt <mvo@debian.org>  Thu, 28 Jul 2011 16:49:15 +0200

apt (0.8.15.4) unstable; urgency=low

  [ David Miller ]
  * apt-pkg/contrib/sha1.cc:
    - fix illegally casts of on-stack buffer to a type requiring more
      alignment than it has resulting in segfaults on sparc (Closes: #634696)

  [ Michael Vogt ]
  * apt-pkg/contrib/cdromutl.cc: