@@ -31,8 +31,12 @@ apt (0.8.15.7) UNRELEASED; urgency=low
   * apt-pkg/indexrecords.cc:
     - fix Acquire::Max-ValidTime option by interpreting it really
       as seconds as specified in the manpage and not as days
+    - add an Acquire::Min-ValidTime option (Closes: #640122)
+  * doc/apt.conf.5.xml:
+    - reword Acquire::Max-ValidTime documentation to make clear
+      that it doesn't provide the new Min-ValidTime functionality
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 05 Sep 2011 13:24:37 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 05 Sep 2011 15:53:12 +0200
 
 apt (0.8.15.6) unstable; urgency=low
 
